--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -14,3 +14,65 @@
 .learn-title {
   width: 40%;
 }
+.learn-content {
+  width: 90%;
+  margin: 0 auto;
+}
+.custom-learn-intro,
+.contests-intro {
+  width: 80%;
+  margin: 2% auto;
+  padding: 2% 0;
+  border-top: 5px solid var(--highlight-pink);
+}
+.contests-intro {
+  margin-bottom: 0.5%;
+  padding-bottom: 0.5%;
+}
+.contests p {
+  width: 80%;
+  margin: 0 auto;
+  padding: 0.5% 0;
+}
+.developer-container {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  padding: 1% 0;
+  margin-bottom: 2%;
+}
+.developer {
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 1rem;
+  display: block;
+  position: relative;
+}
+.contests-btn {
+  width: 20%;
+  position: absolute;
+  top: 45%;
+  left: 40%;
+  display: block;
+  padding: 0.55em 0.7em;
+  border: 1px solid var(--dark-text-color);
+  border-radius: 1rem;
+  background-color: var(--white);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: var(--dark-text-color);
+  margin-top: 0.3rem;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.15s;
+  font-size: 75%;
+  cursor: pointer;
+  opacity: 0.7;
+}
+.router-link {
+  text-decoration: none;
+}
+.contests-btn:hover {
+  background-color: var(--dark-text-color);
+  color: var(--white);
+  opacity: 1;
+}
