--- a/my-app/src/components/pages/Learn/LearnResources.module.css
+++ b/my-app/src/components/pages/Learn/LearnResources.module.css
@@ -3,9 +3,10 @@
   margin: 0 auto;
   background-color: var(--white);
 }
-.html-logo {
+.active-learn-icon {
   display: block;
   width: 15%;
+  margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -36,7 +37,7 @@
   flex-wrap: wrap;
   justify-content: center;
 }
-.resource-card {
+/* .resource-card {
   width: 20%;
   min-width: 300px;
   margin: 1% 0.5%;
@@ -46,7 +47,7 @@
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
-}
+} */
 .html-resource-card,
 .css-resource-card,
 .js-resource-card,
@@ -55,7 +56,7 @@
   min-width: 300px;
   margin: 1% 0.5%;
   background-color: var(--dark-text-color);
-  color: var(--black);
+  color: var(--white);
   border: 3px solid var(--dark-text-color);
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -64,21 +65,26 @@
 .html-resource-card:hover {
   border: 3px solid var(--html-orange);
   background-color: var(--html-orange);
+  color: var(--dark-text-color);
 }
 .css-resource-card:hover {
   border: 3px solid var(--css-blue);
   background-color: var(--css-blue);
+  color: var(--dark-text-color);
 }
 .js-resource-card:hover {
   border: 3px solid var(--js-yellow);
   background-color: var(--js-yellow);
+  color: var(--dark-text-color);
 }
 .react-resource-card:hover {
   border: 3px solid var(--react-blue);
   background-color: var(--react-blue);
+  color: var(--dark-text-color);
 }
 .resource-header {
   background-color: var(--white);
+  color: var(--dark-text-color);
   margin: 0 auto;
   padding: 2% 3%;
   text-align: center;
@@ -93,13 +99,11 @@
   font-size: 0.9rem;
 }
 .resource-details {
-  color: gray;
   font-size: 0.85rem;
   padding: 2%;
   text-align: center;
 }
 .img-container {
-  /* height: 100%; */
   position: relative;
   background-color: var(--white);
 }
