--- a/my-app/src/components/pages/Learn/Contests/Contests.module.css
+++ b/my-app/src/components/pages/Learn/Contests/Contests.module.css
@@ -1,5 +1,7 @@
-.contest-section {
-  padding: 2%;
+.contests-section {
+  width: 90%;
+  margin: 0 auto;
+  padding: 3%;
 }
 table.table {
   width: 80%;
@@ -9,51 +11,42 @@ table.table {
 .table th,
 .table td {
   border-collapse: collapse;
-  border: 1px solid var(--main-ic-color);
+  border: 1px solid var(--dark-text-color);
   text-align: left;
-  padding: 0.3%;
+  padding: 0.5%;
 }
 .th-contest {
-  background-color: var(--highlight-purple);
-  color: var(--main-ic-color);
+  background-color: var(--highlight-pink);
+  color: var(--white);
   width: 40%;
 }
 .th-start,
 .th-end {
-  background-color: var(--highlight-purple);
-  color: var(--main-ic-color);
+  background-color: var(--highlight-pink);
+  color: var(--white);
   width: 20%;
 }
 .td-contest {
-  background-color: rgba(185, 180, 255, 0.3);
+  background-color: rgba(246, 21, 186, 0.2);
+  color: var(--dark-text-color);
   width: 40%;
   font-size: 0.8rem;
   font-weight: 600;
 }
-.th-url {
-  background-color: var(--highlight-purple);
-  color: var(--main-ic-color);
-  width: 15%;
-}
-.td-url a {
-  color: var(--dark-text-color);
+.td-contest a {
   text-decoration: none;
-  font-size: 0.8rem;
+  color: var(--dark-text-color);
 }
-.td-url a:hover {
-  color: var(--dark-aqua);
-}
-.td-url {
-  width: 15%;
-  background-color: rgba(185, 180, 255, 0.2);
+.td-contest a:hover {
+  color: var(--white);
 }
 .td-start {
-  background-color: rgba(185, 180, 255, 0.3);
+  background-color: rgba(246, 21, 186, 0.1);
   width: 20%;
   font-size: 0.8rem;
 }
 .td-end {
   width: 20%;
-  background-color: rgba(185, 180, 255, 0.2);
+  background-color: rgba(246, 21, 186, 0.1);
   font-size: 0.8rem;
 }
