--- a/my-app/src/components/pages/Inspo/Companies/Companies.module.css
+++ b/my-app/src/components/pages/Inspo/Companies/Companies.module.css
@@ -12,7 +12,7 @@
   min-width: 300px;
   margin: 1% 0.5%;
   background-color: var(--dark-text-color);
-  border: 3px solid var(--white);
+  border: 3px solid var(--dark-text-color);
   box-shadow: rgba(204, 195, 187, 0.35) 0px 5px 15px;
   border-radius: 1rem;
   color: var(--black);
