--- a/my-app/src/components/pages/Contact/Contact.module.css
+++ b/my-app/src/components/pages/Contact/Contact.module.css
@@ -1,8 +1,8 @@
 .contact-section {
-  background-color: var(--highlight-pink);
-  color: var(--white);
-  margin: 0 auto;
+  background-color: var(--white);
+  color: var(--dark-text-color);
   text-align: center;
+  border: 1px solid blue;
 }
 .contact-header-container {
   background-image: url('../keyboard-dark.webp');
@@ -11,45 +11,20 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-.contact-body {
-  padding-top: 10%;
-  padding-bottom: 70%;
-}
 .contact-title {
   width: 40%;
+}
+.contact-body {
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid green;
 }
 .contact-text {
   width: 90%;
   margin: 0 auto;
   margin-bottom: 3%;
+  border: 1px solid red;
 }
 .contact-text p {
   margin-top: 1%;
-}
-.contact-icons {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-.icon-container {
-  width: 3rem;
-  height: 3rem;
-  background-color: var(--white);
-  border: 2px solid var(--highlight-purple);
-  border-radius: 50%;
-  margin-right: 1rem;
-  cursor: pointer;
-}
-.icon-phone,
-.icon-mail,
-.icon-in,
-.icon-github {
-  width: 60%;
-  height: 60%;
-  background-color: transparent;
-  margin: 20%;
-}
-.icon-container:hover {
-  background-color: var(--highlight-purple);
-  border: 2px solid var(--white);
 }
