Add html&contests toggle & remove Link to Contests

--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -8,9 +8,9 @@
   padding-bottom: 4%;
 }
 .about-header-container {
-  background-image: url('../keyboard-dark.webp');
+  background-image: url('../keyboard.webp');
   background-color: var(--highlight-pink);
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
