--- a/my-app/src/components/pages/Learn/Learn.module.css
+++ b/my-app/src/components/pages/Learn/Learn.module.css
@@ -5,9 +5,9 @@
   color: var(--dark-text-color);
 }
 .learn-header-container {
-  background-image: url('../keyboard-dark.webp');
+  background-image: url('../keyboard.webp');
   background-color: var(--highlight-pink);
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -46,33 +46,4 @@
   margin: 0 auto;
   border-radius: 1rem;
   display: block;
-  position: relative;
-}
-.contests-btn {
-  width: 20%;
-  position: absolute;
-  top: 45%;
-  left: 40%;
-  display: block;
-  padding: 0.55em 0.7em;
-  border: 1px solid var(--dark-text-color);
-  border-radius: 1rem;
-  background-color: var(--white);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  color: var(--dark-text-color);
-  margin-top: 0.3rem;
-  text-decoration: none;
-  text-align: center;
-  transition: all 0.15s;
-  font-size: 75%;
-  cursor: pointer;
-  opacity: 0.7;
-}
-.router-link {
-  text-decoration: none;
-}
-.contests-btn:hover {
-  background-color: var(--dark-text-color);
-  color: var(--white);
-  opacity: 1;
 }
