--- a/my-app/src/components/pages/Learn/ReadCounter.module.css
+++ b/my-app/src/components/pages/Learn/ReadCounter.module.css
@@ -2,13 +2,13 @@
   margin: 0% auto;
   padding: 2.5% 1%;
   margin-bottom: 2%;
-  background-color: var(--white);
 }
 .counter-text {
   width: 90%;
   margin: 0 auto;
   text-align: center;
   font-size: 0.8rem;
+  color: var(--dark-text-color);
 }
 .btn-container {
   margin: 0 auto;
