--- a/my-app/src/components/pages/Inspo/Companies/Companies.module.css
+++ b/my-app/src/components/pages/Inspo/Companies/Companies.module.css
@@ -1,3 +1,15 @@
+.filter-by {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 1%;
+}
+.select-topic {
+  margin: 0 auto;
+  margin-top: 1%;
+  border: 1px solid var(--black);
+  border-radius: 1rem;
+  box-shadow: var(--highlight-pink) 0px 1px 5px;
+}
 .company-cards-wrapper {
   width: 90%;
   padding: 2.5% 0;
