Update page title styles

--- a/my-app/src/components/Hero/Hero.module.css
+++ b/my-app/src/components/Hero/Hero.module.css
@@ -17,6 +17,7 @@
   top: 25%;
   left: 10%;
   color: var(--highlight-pink);
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .hero-text h1 {
   font-size: 3rem;
