--- a/my-app/src/components/pages/About/About.module.css
+++ b/my-app/src/components/pages/About/About.module.css
@@ -7,12 +7,14 @@
   background-color: var(--white);
   padding-bottom: 4%;
 }
-.about-header-container {
-  background-image: url('../keyboard.webp');
-  background-color: var(--highlight-pink);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.about-header-container h1 {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 2%;
+  color: var(--highlight-pink);
+  font-size: 3rem;
+  text-transform: uppercase;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .about-title {
   display: block;
@@ -21,7 +23,7 @@
 }
 .hi-text {
   font-size: 1.2rem;
-  padding-top: 3%;
+  padding-top: 1%;
   padding-bottom: 1%;
 }
 .name {
