--- a/my-app/src/components/pages/Inspo/Inspo.module.css
+++ b/my-app/src/components/pages/Inspo/Inspo.module.css
@@ -3,12 +3,15 @@
   text-align: center;
   background-color: var(--white);
 }
-.inspo-header-container {
-  background-image: url('../keyboard.webp');
-  background-color: var(--highlight-pink);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.inspo-header-container h1 {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 2%;
+  color: var(--highlight-pink);
+  font-size: 3rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 .inspo-title {
   width: 40%;
