--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,7 +28,7 @@
   scroll-padding-top: var(--scroll-padding, 80px);
 }
 
-/* body {
-  color: var(--dark-text-color);
+body {
+  /* color: var(--dark-text-color); */
   background-color: var(--white);
-} */
+}
