--- a/my-app/src/components/pages/Inspo/Companies/Companies.module.css
+++ b/my-app/src/components/pages/Inspo/Companies/Companies.module.css
@@ -6,6 +6,7 @@
 .select-topic {
   margin: 0 auto;
   margin-top: 1%;
+  padding: 0.5%;
   border: 1px solid var(--black);
   border-radius: 1rem;
   box-shadow: var(--highlight-pink) 0px 1px 5px;
