--- a/my-app/src/components/pages/Learn/LearnResources.module.css
+++ b/my-app/src/components/pages/Learn/LearnResources.module.css
@@ -31,6 +31,8 @@
   padding: 2.5% 0;
   margin: 0 auto;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .html-resource-card,
