--- a/my-app/src/components/pages/Inspiration/Inspiration.module.css
+++ b/my-app/src/components/pages/Inspiration/Inspiration.module.css
@@ -1,9 +1,9 @@
-.inspo-section {
+.inspiration-section {
   width: 90%;
   margin: 0 auto;
   text-align: center;
 }
-.inspo-header-container h1 {
+.inspiration-header-container h1 {
   margin: 0 auto;
   margin-top: 2%;
   color: var(--highlight-pink);
@@ -12,14 +12,14 @@
   text-transform: uppercase;
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
-.inspo-header-container h2 {
+.inspiration-header-container h2 {
   font-size: 1.7rem;
 }
-.inspo-text {
+.inspiration-text {
   width: 85%;
   margin: 0 auto;
 }
-.inspo-text h2 {
+.inspiration-text h2 {
   width: 70%;
   padding-top: 3%;
   margin: 0 auto;
