--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -45,3 +45,14 @@
 .hero-btn:hover {
   background-color: rgba(255, 164, 0, 0.75);
 }
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .hero-text h1 {
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
+  }
+  .hero-text h2 {
+    font-size: 1rem;
+    color: var(--white);
+  }
+}
