--- a/src/components/pages/Contact/Contact.module.css
+++ b/src/components/pages/Contact/Contact.module.css
@@ -1,5 +1,4 @@
 .contact-section {
-  background-color: var(--white);
   color: var(--dark-text-color);
   text-align: center;
 }
@@ -11,9 +10,6 @@
   font-size: 3rem;
   text-transform: uppercase;
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
-}
-.contact-title {
-  width: 40%;
 }
 .contact-body {
   width: 90%;
@@ -45,6 +41,7 @@
   margin: 15% auto;
   font-size: 1.5rem;
   text-align: center;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.7);
 }
 .contact-form-right {
   width: 50%;
@@ -103,4 +100,38 @@
 .send-btn:hover {
   background-color: var(--white);
   color: var(--dark-text-color);
+}
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .contact-header-container h1 {
+    margin-top: 5%;
+    font-size: 2.2rem;
+  }
+  .contact-form {
+    margin-top: 5%;
+    margin-bottom: 10%;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  .contact-form-right {
+    width: 100%;
+    border-bottom-left-radius: 1rem;
+    border-top-right-radius: 0;
+  }
+  .contact-form-right h2 {
+    margin-top: 5%;
+    font-size: 1.2rem;
+  }
+  .contact-form-right p {
+    font-size: 1rem;
+  }
+  .contact-form-left {
+    width: 100%;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 0;
+  }
+  .contact-form-left h2 {
+    margin-top: 6%;
+    font-size: 1.2rem;
+  }
 }
