--- a/src/components/pages/About/About.module.css
+++ b/src/components/pages/About/About.module.css
@@ -71,3 +71,46 @@
 .intro-text a:hover {
   opacity: 0.8;
 }
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .about-header-container h1 {
+    margin-top: 5%;
+    font-size: 2.2rem;
+  }
+  .about-header-container h2 {
+    margin-top: 3%;
+    font-size: 1.3rem;
+  }
+  .about-header-container h3 {
+    font-size: 1rem;
+  }
+  .name {
+    font-size: 1.3rem;
+  }
+  .profile {
+    width: 50%;
+    margin: 2% 0;
+  }
+  .question {
+    font-size: 1.2rem;
+    width: 85%;
+    padding-bottom: 2%;
+  }
+  .first-intro-text {
+    width: 85%;
+    font-size: 0.8rem;
+  }
+  .first-intro-text p {
+    padding-bottom: 1%;
+  }
+  .intro-text {
+    width: 85%;
+    font-size: 0.8rem;
+  }
+  .intro-text p {
+    padding-bottom: 1.5%;
+  }
+  .about-body {
+    padding-bottom: 7%;
+  }
+}
