--- a/src/components/pages/Learn/Learn.module.css
+++ b/src/components/pages/Learn/Learn.module.css
@@ -38,7 +38,7 @@
   padding: 0.5%;
 }
 .developer-container {
-  width: 80%;
+  /* width: 80%; */
   margin: 0 auto;
   padding: 1%;
   margin-bottom: 2%;
@@ -48,4 +48,25 @@
   margin: 0 auto;
   border-radius: 1rem;
   display: block;
+}
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .learn-header-container h1 {
+    margin-top: 5%;
+    font-size: 2.2rem;
+  }
+  .topics-intro {
+    margin-top: 3%;
+    font-size: 1.2rem;
+  }
+  .contests-intro {
+    margin-top: 5%;
+    padding: 0.5%;
+    font-size: 1.2rem;
+  }
+  .contests p {
+    width: 90%;
+    padding: 0.5%;
+    font-size: 0.8rem;
+  }
 }
