--- a/src/components/pages/Inspiration/Companies/CompanyProfiles.module.css
+++ b/src/components/pages/Inspiration/Companies/CompanyProfiles.module.css
@@ -80,3 +80,9 @@
   line-height: 1.2;
   overflow: auto;
 }
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .company-card {
+    margin: 2%;
+  }
+}
