--- a/src/components/pages/Inspiration/Inspiration.module.css
+++ b/src/components/pages/Inspiration/Inspiration.module.css
@@ -25,3 +25,14 @@
   margin: 0 auto;
   color: var(--dark-text-color);
 }
+/*Small devices*/
+@media screen and (max-width: 640px) {
+  .inspiration-header-container h1 {
+    margin-top: 5%;
+    font-size: 2rem;
+  }
+  .inspiration-header-container h2 {
+    margin-top: 3%;
+    font-size: 1.2rem;
+  }
+}
