--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -7,6 +7,10 @@
   padding-top: 0.3%;
   padding-bottom: 0.3%;
   position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 .logo-container {
   cursor: pointer;
