--- a/src/components/context/UserBar.module.css
+++ b/src/components/context/UserBar.module.css
@@ -2,17 +2,17 @@
 .login-form {
   width: 90%;
   margin: 0 auto;
-  padding-top: 0.5%;
+  padding: 0.5% 0 1% 0;
+  font-size: 0.9rem;
+}
+.login-form p {
+  padding: 0;
+  margin-bottom: 0.2%;
 }
 .login-input {
-  border: 1px solid var(--black);
-  padding: 0.2%;
-  margin: 0.2% 0;
-}
-.login {
-  text-align: left;
-  padding: 0.3% 0;
-  padding-bottom: 1%;
+  border: 1px solid gray;
+  padding: 0.3%;
+  margin-right: 0.5%;
 }
 .login-btn {
   padding: 0.5%;
@@ -31,85 +31,67 @@
   width: 90%;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 0.9rem;
 }
 /*Welcome*/
 .welcome-sentence {
-  width: 30%;
+  width: 90%;
   padding: 0.5%;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  word-break: break-word;
-}
-.welcome-sentence p {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
+  margin-bottom: 0;
 }
 /*Random Quote*/
-.intro-quote {
-  width: 70%;
-  font-size: 0.9;
-  padding: 0%;
-  text-align: right;
-}
-.intro-quote p {
-  font-size: 0.9rem;
-  margin: 0;
-  padding-right: 0;
-  text-align: right;
-}
 .random-quote {
-  padding: 0;
+  width: 90%;
+  opacity: 0.85;
 }
 .quote {
-  font-size: 0.9rem;
-  font-style: italic;
+  padding-top: 0;
   font-weight: 600;
-  padding: 0.5%;
+  color: var(--highlight-pink);
 }
 .author {
-  font-size: 0.9rem;
+  padding-top: 0;
   font-style: italic;
-  padding: 0.5% 0;
+  color: var(--highlight-pink);
 }
 /*User Status*/
-.user-status-wrapper {
-  width: 80%;
-  padding: 0%;
+.status-wrapper {
+  width: 90%;
+  margin: 1% 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
-  font-size: 0.9rem;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 }
-.user-status-choice {
-  padding: 0.5%;
+.status-question {
+  width: 100%;
+  padding: 0 0.5%;
+  margin-bottom: 0;
 }
-.user-status {
-  padding: 0.5%;
-}
-.user-status-choice p {
-  padding: 0;
-  font-size: 0.9rem;
-}
-.user-status-sentence {
-  font-size: 0.9rem;
-  font-weight: 500;
-  padding-top: 0.5%;
-  text-align: left;
-  padding-left: 0;
+.status-msg {
+  width: 100%;
+  padding: 0 0.5%;
+  margin-top: 0.5%;
+  margin-bottom: 0.5%;
 }
 /*Buttons*/
 .status-btn-wrapper {
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  padding-top: 0.5%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .status-btn {
-  margin: 0% 0.5%;
-  padding: 2% 3%;
+  margin: 1% 0.5% 0.2% 0.5%;
+  padding: 0.5% 2%;
   border: 1px solid var(--dark-text-color);
   border-radius: 1rem;
   background-color: var(--white);
@@ -118,7 +100,6 @@
   text-decoration: none;
   text-align: center;
   transition: all 0.15s;
-  font-size: small;
   cursor: pointer;
 }
 .status-btn:hover {
@@ -127,13 +108,12 @@
   border: 1px solid var(--white);
 }
 .logout {
-  width: 9%;
-  padding: 0.5% 0;
-  text-align: right;
+  width: 90%;
+  margin-bottom: 2%;
 }
 .logout-btn {
-  margin: 0.5% 0;
-  padding: 5%;
+  margin: 0 auto;
+  padding: 0.5% 1%;
   border: 1px solid var(--dark-text-color);
   border-radius: 1rem;
   background-color: var(--white);
@@ -142,7 +122,6 @@
   text-decoration: none;
   text-align: center;
   transition: all 0.15s;
-  font-size: small;
   cursor: pointer;
 }
 .login-btn:hover,
@@ -150,89 +129,4 @@
   background-color: var(--dark-text-color);
   color: var(--white);
   border: 1px solid var(--white);
-}
-/*Small devices*/
-@media screen and (max-width: 640px) {
-  .login-input {
-    padding: 0.5%;
-    margin: 0;
-    font-size: 0.6rem;
-  }
-  .login-btn {
-    font-size: 0.5rem;
-    padding: 1.5%;
-  }
-  /*User bar*/
-  .welcome-wrapper {
-    width: 95%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  /*Welcome*/
-  .welcome-sentence {
-    width: 30%;
-  }
-  .welcome-sentence p {
-    font-size: 0.6rem;
-  }
-  /*Random Quote*/
-  .intro-quote {
-    text-align: right;
-    width: 70%;
-    font-size: 0.6rem;
-    padding: 0%;
-  }
-  .intro-quote p {
-    font-size: 0.6rem;
-    margin: 0;
-    padding-right: 0;
-    text-align: right;
-  }
-  .random-quote {
-    padding: 0;
-  }
-  .quote {
-    font-size: 0.6rem;
-    font-weight: 600;
-    padding: 0.5%;
-  }
-  .author {
-    font-size: 0.6rem;
-    padding: 0.5% 0;
-  }
-  /*User Status*/
-  .user-status-wrapper {
-    width: 80%;
-    padding: 0%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 0.6rem;
-  }
-  .user-status-choice p {
-    padding: 0;
-    font-size: 0.6rem;
-  }
-  .user-status-sentence {
-    font-size: 0.6rem;
-    font-weight: 400;
-    padding-top: 0.5%;
-    text-align: left;
-    padding-left: 0;
-  }
-  /*Buttons*/
-  .status-btn {
-    font-size: 0.5rem;
-  }
-  .logout {
-    width: 20%;
-    padding: 0;
-  }
-  .logout-btn {
-    margin: 0;
-    padding: 3% 5%;
-    font-size: 0.5rem;
-  }
 }
